--- a/cloudfunctions/inspireFunctions/package.json
+++ b/cloudfunctions/inspireFunctions/package.json
@@ -9,6 +9,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "wx-server-sdk": "~2.4.0"
+    "md5": "^2.3.0",
+    "request-promise": "^4.2.6",
+    "wx-server-sdk": "^2.6.3"
   }
 }
