--- a/cloudfunctions/shopFunctions/package.json
+++ b/cloudfunctions/shopFunctions/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "quickstartFunctions",
+  "name": "shopFunctions",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -9,6 +9,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "md5": "^2.3.0",
+    "request-promise": "^4.2.6",
     "wx-server-sdk": "~2.4.0"
   }
 }
