--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -1,7 +1,23 @@
 {
   "pages": [
-    "pages/index/index"
+    "pages/index/index",
+    "pages/nearby/index",
+    "pages/mine/index"
   ],
+  "tabBar": {
+    "custom": true,
+    "list": [
+      {
+        "pagePath": "pages/index/index"
+      },
+      {
+        "pagePath": "pages/nearby/index"
+      },
+      {
+        "pagePath": "pages/mine/index"
+      }
+    ]
+  },
   "window": {
     "backgroundColor": "#F6F6F6",
     "backgroundTextStyle": "light",
